# .shells

./: .aspell.en.pws  .bash_profile  .bashrc  .cliflix.json  .closhrc  .curlrc  .darkattic  .emacs-profiles.el  .gitconfig  .gitignore  .gitignore_global  .glances  .inputrc  .ispell_english  .lftprc  .lynx.cfg  .nvimrc  .phoenix.js  .powerline-shell.json  .profile  .rvmrc  .sbclrc  .shared.sh  .slynkrc  .tmux.conf  .vimrc_back  .vsvimrc  .zprofile  .zshenv  .zshrc
.atom/: config.cson  keymap.cson
.fanficfare/: personal.ini
.gnupg/: gpg-agent.conf
.hammerspoon/: init.lua
.ipython/profile_default/: ipython_config.py  ipython_kernel_config.py
.julia/config/: startup.jl
.overtone/: config.clj
.proxychains/: proxychains.conf
Downloads/: Caddyfile
scripts/: .dumbjump  .gitignore  .python  AGENTS.md  agents.md  readme.org
scripts/.claude/: settings.local.json
scripts/PE/: ACT_v2.1.md  ACT_v2.md  ACT_v3.2.md  ACT_v3.md  BIDI_v1.1.md  BIDI_v1.md  CBT_v1.md  CBT_v2.md  Python.org  STT_coding.md  Telegram_SUTCSE_rewrite_v1.md  Zsh.org  Zsh_extras.org  compacter_GPT5_v1.md  dictionary_Lexi_v1.md  elisp.org  extractor_v1.md  gen.org  know_partner_Opus4.1T_v1.md  learning_resources_v1.md  night-sh.md  programming.org  redteam_v1.1.md  redteam_v1.md  review_v1.md  socratic_teacher_stateful_v1.md  socratic_teacher_v1.1.md  socratic_teacher_v1.3.md
scripts/cpplang/org_sort_date/: .dir-locals.el  .gitignore  CMakeLists.txt  Doxyfile  compile_commands.json  main.cpp  readme.org
scripts/cpplang/org_sort_date/.cache/clangd/index/: main.cpp.9F2419C0F54E19AE.idx
(+1270 files in other folders)
